Independencia de cards, creacion de SearchBar

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -2,6 +2,8 @@
 Card{
     align-items: center;
     justify-content: center;
-    border: 5cm;
     color: red;
+    div{
+        border:solid;
+    }
 }
