--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "MuseoModerno", sans-serif;
+
 }
 
 .page{
@@ -19,11 +21,7 @@
     flex-direction: column;
 }
 
-.main{
-    min-height: 100%;
-    
-    
-}
+
 
 
 .footer{
