--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -4,12 +4,14 @@
     flex-direction: column;
     font-size: 12px;
     position: absolute;
-    top: 75px;
+    top: 100px;
     width: 230px;
     background-color: white;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
-    padding: 3px 2px 3px
+    border-radius: 10px;
+    padding: 5px 2px 3px;
+    margin-top: 3px;
 
 }
 
@@ -29,4 +31,10 @@
 
 .nav{
     width: 230px;
+    box-shadow: 3px 5px;
+    border-radius: 15px;
+}
+
+.nav:focus{
+    outline: none;
 }
